Make list gap shorter to prevent scroll

--- a/style.css
+++ b/style.css
@@ -86,7 +86,6 @@ div {
     justify-content: center;
     align-content: center;
     text-align: center;
-    gap: 2rem;
     padding: 2rem;
 }
 
